# Tauri-Qiniu-App

./: .gitignore  azure-pipelines.yml  index.html  package.json  rsw.toml  vite.config.ts
.github/workflows/: release.yml
@mywasm/foo/: Cargo.toml  LICENSE_MIT
@mywasm/foo/src/: lib.rs
src/: App.module.less  App.tsx  Test.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/migrations/2022-12-25-033756_create_downloads/: up.sql
src-tauri/app/src/: error.rs  lib.rs  main.rs
src-tauri/app/src/commands/: qn_command.rs
src-tauri/app/src/models/: download.rs  download_info.rs  downloads.rs  mod.rs  qn_file.rs  upload_info.rs
src-tauri/app/src/repositories/: download_repository.rs  mod.rs  upload_repository.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/entities/: download.rs  mod.rs  prelude.rs  upload.rs
src-tauri/migration/src/: lib.rs  m20221227_152441_create_download_table.rs
src-tauri/migrations/2022-12-25-033756_create_downloads/: down.sql
src-tauri/src/: error.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: QnCommand.rs  mod.rs  qn_command.rs
src-tauri/src/models/: QnFile.rs  download.rs  mod.rs  prelude.rs  qn_file.rs
src/apis/: QiNiu.ts  index.ts
src/components/DownloadPanel/: index.module.less  index.tsx
src/components/FileList/: index.tsx
src/components/FileList/FileListItem/: index.tsx
src/components/InfiniteScrollList/: index.module.less  index.tsx
src/models/: File.ts
src/utils/: utils.ts
