[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "system-tray"] }
qiniu-sdk = { version = "0.2.2", features = [
    "objects",
    "reqwest",
    "credential",
    "download",
] }
humansize = "2.1.2"
thiserror = "1.0.38"
base64 = "0.20.0"
infer = "0.11.0"
mime_guess = "2.0.4"
diesel = { version = "2.0.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "quickcheck",
] }
tokio = { version = "1.23.0", features = ["full"] }
dotenvy = "0.15"
sea-orm = { version = "0.10.6", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-native-tls",
    "debug-print",
] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "diesel_example"
